--- a/app/src/main/res/layout/create_meeting_activity.xml
+++ b/app/src/main/res/layout/create_meeting_activity.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appBarLayout"
+        android:id="@+id/collapsing_toolbar"
         android:layout_width="match_parent"
         android:layout_height="56dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -17,7 +17,7 @@
             android:background="@color/lamzone_500">
 
             <com.google.android.material.appbar.MaterialToolbar
-                android:id="@+id/toolbar"
+                android:id="@+id/appbar"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
@@ -51,13 +51,13 @@
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
+        app:layout_constraintTop_toBottomOf="@id/collapsing_toolbar"
         app:layout_constraintStart_toStartOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
+            app:layout_constraintTop_toBottomOf="@+id/collapsing_toolbar"
             app:layout_constraintTop_toTopOf="parent">
 
             <androidx.cardview.widget.CardView
@@ -179,6 +179,7 @@
                         android:layout_width="@dimen/button_default_width"
                         android:layout_height="45dp"
                         android:layout_marginEnd="@dimen/cardview_default_margin"
+                        android:textAlignment="center"
                         app:layout_constraintBottom_toBottomOf="@+id/spinner_room_action"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.5"
