--- a/app/src/main/res/layout/meeting_list_activity.xml
+++ b/app/src/main/res/layout/meeting_list_activity.xml
@@ -22,7 +22,7 @@
             app:layout_constraintTop_toTopOf="@id/main_content">
 
             <com.google.android.material.appbar.CollapsingToolbarLayout
-                android:id="@+id/collapsingToolbar"
+                android:id="@+id/collapsingToolbarMenu"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -76,23 +76,22 @@
             app:layout_constraintTop_toBottomOf="@id/appBarLayout"
             tools:listitem="@layout/item_meeting" />
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/CreateMeetingButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center|bottom"
-            android:layout_margin="16dp"
-            android:layout_marginBottom="@dimen/margin_default"
-            android:clickable="true"
-            android:contentDescription="Add_meeting_button"
-            android:focusable="true"
-            android:tintMode="@color/white"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:srcCompat="@drawable/ic_baseline_add_24"
-            tools:ignore="HardcodedText" />
-
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/CreateMeetingButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_margin="16dp"
+        android:layout_marginBottom="@dimen/margin_default"
+        android:clickable="true"
+        android:contentDescription="Add_meeting_button"
+        android:focusable="true"
+        android:tintMode="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ic_baseline_add_24"
+        tools:ignore="HardcodedText" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
